--- a/deployment/docker_compose/docker-compose.dev.yml
+++ b/deployment/docker_compose/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
     command: >
       /bin/sh -c "alembic upgrade head &&
       echo \"Starting Danswer Api Server\" &&
-      uvicorn danswer.main:app --host 0.0.0.0 --port 8080"
+      uvicorn danswer.main:app --host 0.0.0.0 --port 8080 --reload"
     depends_on:
       - relational_db
       - index
@@ -77,6 +77,7 @@ services:
       - model_cache_torch:/root/.cache/torch/
       - model_cache_nltk:/root/nltk_data/
       - model_cache_huggingface:/root/.cache/huggingface/
+      - ../../backend/danswer:/app/danswer
     extra_hosts:
       - "host.docker.internal:host-gateway"
     logging:
